--- a/Open_LuckyDraw.html
+++ b/Open_LuckyDraw.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Quay Số May Mắn (Upload UI Fix)</title>
+  <title>Quay Số May Mắn</title>
   <!-- Google font -->
   <link
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap"
